[package]
name = "portforwarder"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
log = "0.4.20"
log4rs = { version="1.2.0", features = ["gzip", "background_rotation"] }
chrono = "0.4.31"
rocket = { version="=0.5.0-rc.3", features = ["tls", "mtls"] }
base64 = "0.21.4"
serde_json = "1"
rand = "0.8"
