[package]
name = "portforwarder"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
log = "0.4.25"
log4rs = { version="1.3.0", features = ["gzip", "background_rotation"] }
chrono = "0.4.39"
rocket = { version="=0.5.1", features = ["tls", "mtls"] }
base64 = "0.22.1"
serde_json = "1"
rand = "0.8"
tokio-context = "0.1.3"
