[package]
name = "portforwarder"
version = "2.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
anyhow = "1"
log = "0.4"
log4rs = { version="1", features = ["gzip", "background_rotation"] }
chrono = "0.4"
rocket = { version="=0.5", features = ["tls", "mtls"] }
base64 = "0.22"
serde_json = "1"
rand = "0.9"
tokio-context = "0.1"
include_dir = {version="0.7", features=["glob", "metadata"]}
regex = "1"